force-app/main/default/objects/Project__c/fields/Assigned_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Total_Hours__c</fullName>
    <formula>AssignedTotalHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Total Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>