force-app/main/default/objects/Project__c/fields/AssignedTotalHours__c.field-meta.xml
<CustomField>
    <fullName>AssignedTotalHours__c</fullName>
    <label>AssignedTotalHours</label>
    <summarizedField>ProjectLineItem__c.AssignedHousxRol__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>