force-app/main/default/objects/Project__c/fields/SquadLead_c__c.field-meta.xml
<CustomField>
    <fullName>SquadLead_c__c</fullName>
    <formula>Squad_Lead__r.FirstName + &apos; &apos; +  Squad_Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SquadLead</label>
    <type>Text</type>
</CustomField>