force-app/main/default/objects/Project__c/validationRules/assignedhours_less_than_espected_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>assignedhours_less_than_espected_hours</fullName>
    <active>false</active>
    <errorConditionFormula>/*IF(  */Sold_Hours__c &lt;  AssignedTotalHours__c /* , ISPICKVAL(Status__c, &quot;In Progress&quot;), ISPICKVAL(Status__c, &quot;Pre-kickoff&quot;))*/</errorConditionFormula>
    <errorMessage>las horas asignadas deben ser menores o igual a las horas vendidas</errorMessage>
</ValidationRule>