force-app/main/default/objects/Project__c/validationRules/modify_in_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>modify_in_progress</fullName>
    <active>false</active>
    <errorConditionFormula>IF(PRIORVALUE(Status__c) = &apos;Pre-kickoff&apos;, false ,  IF(PRIORVALUE(Status__c) = &apos;In Progress&apos;  &amp;&amp;  ISPICKVAL(Status__c, &apos;Completed&apos;) , false , true) )</errorConditionFormula>
    <errorMessage>No se puede modificar cuando el proyecto esta en progreso</errorMessage>
</ValidationRule>