force-app/main/default/objects/Project__c/validationRules/Vendido_vs_asignada.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendido_vs_asignada</fullName>
    <active>false</active>
    <errorConditionFormula>Sold_Hours__c  &lt;&gt;  AssignedTotalHours__c</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Las horas vendidas deben ser iguales a las horas asignadas</errorMessage>
</ValidationRule>