force-app/main/default/objects/Project__c/listViews/Listview1.listView-meta.xml
<ListView>
    <fullName>Listview1</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Squad_Lead__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Sold_Hours__c</columns>
    <columns>AssignedTotalHours__c</columns>
    <filterScope>Everything</filterScope>
    <label>Proyectos</label>
</ListView>