force-app/main/default/objects/Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
    <sharedTo>
        <role>Arquitect</role>
        <role>Consultant</role>
        <role>Developer</role>
    </sharedTo>
</ListView>